Bonus/flagger/emp/emp-destination-role.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: employees
  namespace: flagger
spec:
  host: employees
  subsets:
  - labels:
      version: v1
    name: v1
  - labels:
      version: v2
    name: v2
  - labels:
      version: v3
    name: v3
